--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "dependencies": {
         "axios": "^0.19.0",
         "core-js": "^2.6.5",
-        "dayjs": "^1.8.16",
-        "mockjs": "^1.0.1-beta3",
-        "qs": "^6.9.0",
-        "vant": "^2.2.2",
-        "vue": "^2.6.10",
-        "vue-router": "^3.0.3",
-        "vuex": "^3.0.1",
         "cssnano": "^4.1.8",
+        "dayjs": "^1.8.16",
         "fastclick": "^1.0.6",
         "good-storage": "^1.1.0",
+        "mock": "^0.1.1",
+        "mockjs": "^1.0.1-beta3",
         "nprogress": "^0.2.0",
         "photoswipe": "^4.1.3",
         "postcss-aspect-ratio-mini": "^1.0.1",
@@ -27,7 +23,12 @@
         "postcss-px-to-viewport": "^0.0.3",
         "postcss-url": "^8.0.0",
         "postcss-viewport-units": "^0.1.6",
-        "postcss-write-svg": "^3.0.1"
+        "postcss-write-svg": "^3.0.1",
+        "qs": "^6.9.0",
+        "vant": "^2.2.2",
+        "vue": "^2.6.10",
+        "vue-router": "^3.0.3",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.11.0",
