--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "shopping",
-  "name": "vue-demo",
+
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
